--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 
             <div class="about__text" id="tecno">
-                <h2 class="subtitle">Tecnologias con las que Creamos Nuestros</h2>
+                <h2 class="subtitle">Tecnologias con las que Creamos Nuestros Juegos</h2>
                 <h3>HTML5 CSS Bootstrap</h3><br>
                 <h3>PHP</h3><br>
                 <h3>JAVA</h3><br>
