--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 
             <div class="about__text" id="tecno">
                 <h2 class="subtitle">Tecnologias con las que Creamos Nuestros Juegos</h2>
-                <h3>HTML5 CSS Bootstrap</h3><br>
+                <h3>HTML5</h3><br>
+                <h3>CSS Bootstrap</h3><br>
                 <h3>PHP</h3><br>
                 <h3>JAVA</h3><br>
                 <h3>JavaScript</h3><br>
