--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header class="hero" id="hero">
         <div class="container">
             <nav class="nav">
-                <a href="#" class="nav__items nav__items--cta">Juegos</a>
-                <a href="#" class="nav__items">¿Quienes Somos?</a>
+                <a href="#juegos" class="nav__items nav__items--cta">Juegos</a>
+                <a href="#somos" class="nav__items">¿Quienes Somos?</a>
                 <a href="#foo" class="nav__items">Contactanos</a>
             </nav>
 
