--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="projects__hover">
                         <h2 class="projects__title">Shoting Colors</h2>
                         <i class="fa-solid fa-explosion projects__icon"></i>
-                        <a href="https://www.messenger.com/login.php?next=https%3A%2F%2Fwww.messenger.com%2Ft%2F109669541784799%2F%3Fmessaging_source%3Dsource%253Apages%253Amessage_shortlink%26source_id%3D1441792" class="btn-ad">Comprar</a>
+                        <a href="https://wa.me/qr/Z2NNCMGBVCNXB1" class="btn-ad">Comprar</a>
                     </div>
                 </article>
 
@@ -51,7 +51,7 @@
                     <div class="projects__hover">
                         <h2 class="projects__title">Space Galaxy</h2>
                         <i class="fa-brands fa-space-awesome projects__icon"></i>
-                        <a href="https://www.messenger.com/login.php?next=https%3A%2F%2Fwww.messenger.com%2Ft%2F109669541784799%2F%3Fmessaging_source%3Dsource%253Apages%253Amessage_shortlink%26source_id%3D1441792" class="btn-ad">Comprar</a>
+                        <a href="https://wa.me/qr/Z2NNCMGBVCNXB1" class="btn-ad">Comprar</a>
                     </div>
                 </article>
 
@@ -61,7 +61,7 @@
                     <div class="projects__hover">
                         <h2 class="projects__title">Dino Google</h2>
                         <i class="fa-solid fa-dragon projects__icon"></i>
-                        <a href="https://www.messenger.com/login.php?next=https%3A%2F%2Fwww.messenger.com%2Ft%2F109669541784799%2F%3Fmessaging_source%3Dsource%253Apages%253Amessage_shortlink%26source_id%3D1441792" class="btn-ad">Comprar</a>
+                        <a href="https://wa.me/qr/Z2NNCMGBVCNXB1" class="btn-ad">Comprar</a>
                     </div>
                 </article>
 
@@ -70,7 +70,7 @@
                     <div class="projects__hover">
                         <h2 class="projects__title">SpaceShip</h2>
                         <i class="fa-solid fa-satellite projects__icon"></i>
-                        <a href="https://www.messenger.com/login.php?next=https%3A%2F%2Fwww.messenger.com%2Ft%2F109669541784799%2F%3Fmessaging_source%3Dsource%253Apages%253Amessage_shortlink%26source_id%3D1441792" class="btn-ad">Comprar</a>
+                        <a href="https://wa.me/qr/Z2NNCMGBVCNXB1" class="btn-ad">Comprar</a>
                     </div>
                 </article>
 
@@ -79,7 +79,7 @@
                     <div class="projects__hover">
                         <h2 class="projects__title">Space Defense</h2>
                         <i class="fa-solid fa-meteor projects__icon"></i>
-                        <a href="https://www.messenger.com/login.php?next=https%3A%2F%2Fwww.messenger.com%2Ft%2F109669541784799%2F%3Fmessaging_source%3Dsource%253Apages%253Amessage_shortlink%26source_id%3D1441792" class="btn-ad">Comprar</a>
+                        <a href="https://wa.me/qr/Z2NNCMGBVCNXB1" class="btn-ad">Comprar</a>
                     </div>
                 </article>
 
