--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
             <div class="testimony__grid">
                 <article class="testimony__item">
                     <div class="testimony__person">
-                        <img src="./src/img/obc.png" alt="" class="testimony__img">
+                        <img src="./src/img/c1.jpeg" alt="" class="testimony__img">
                         <div class="testimony__texts">
-                            <h3 class="testimony__name">Espacio Para Criticas</h3>
-                            <p class="testimony__verification">??????????</p>
+                            <h3 class="testimony__name">Samantha Xanté</h3>
+                            <p class="testimony__verification">Estudiante</p>
                         </div>
                     </div>
-                    <p class="testimony__review">Escribenos para poder poner tu comentario o tu critica en este apartado</p>
+                    <p class="testimony__review">¡Estoy feliz con el servicio que me an proporcionado!</p>
                 </article>
 
                 <article class="testimony__item">
