--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <p class="testimony__verification">Estudiante</p>
                         </div>
                     </div>
-                    <p class="testimony__review">¡Estoy feliz con el servicio que me an proporcionado!</p>
+                    <p class="testimony__review">¡Estoy feliz con el servicio que me han proporcionado!</p>
                 </article>
 
                 <article class="testimony__item">
