--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
 
                 <article class="testimony__item">
                     <div class="testimony__person">
-                        <img src="./src/img/obc.png" alt="" class="testimony__img">
+                        <img src="./src/img/c2.png" alt="" class="testimony__img">
                         <div class="testimony__texts">
-                            <h3 class="testimony__name">Espacio Para Criticas</h3>
-                            <p class="testimony__verification">??????????</p>
+                            <h3 class="testimony__name">Adriana Campos</h3>
+                            <p class="testimony__verification">Universitaria</p>
                         </div>
                     </div>
-                    <p class="testimony__review">Escribenos para poder poner tu comentario o tu critica en este apartado</p>
+                    <p class="testimony__review">¡Genial! Responden casi de inmediato y ajusta los videojuegos según el gusto del cliente</p>
                 </article>
             </div>
         </section>
