--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="testimony__grid">
                 <article class="testimony__item">
                     <div class="testimony__person">
-                        <img src="./src/img/c1.jpeg" alt="" class="testimony__img">
+                        <img src="./src/img/c3.jpeg" alt="" class="testimony__img">
                         <div class="testimony__texts">
                             <h3 class="testimony__name">Samantha Xanté</h3>
                             <p class="testimony__verification">Estudiante</p>
@@ -152,6 +152,32 @@
                         </div>
                     </div>
                     <p class="testimony__review">¡Genial! Responden casi de inmediato y ajusta los videojuegos según el gusto del cliente</p>
+                </article>
+            </div>
+        </section>
+
+        <section class="testimony container">
+            <div class="testimony__grid">
+                <article class="testimony__item">
+                    <div class="testimony__person">
+                        <img src="./src/img/c2.png" alt="" class="testimony__img">
+                        <div class="testimony__texts">
+                            <h3 class="testimony__name">Yenesia Simaj</h3>
+                            <p class="testimony__verification">Comerciante</p>
+                        </div>
+                    </div>
+                    <p class="testimony__review">Es increíble los software que OBC Gamers muestra al público. No sólo es cantidad, sino que también existe calidad que es algo muy importante en el entorno de los negocios</p>
+                </article>
+                
+                <article class="testimony__item">
+                    <div class="testimony__person">
+                        <img src="./src/img/c2.png" alt="" class="testimony__img">
+                        <div class="testimony__texts">
+                            <h3 class="testimony__name">Espacio Para Criticas</h3>
+                            <p class="testimony__verification">Profeción</p>
+                        </div>
+                    </div>
+                    <p class="testimony__review">Escribenos para poder poner tu comentario o tu critica en este apartado</p>
                 </article>
             </div>
         </section>
