--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="testimony__grid">
                 <article class="testimony__item">
                     <div class="testimony__person">
-                        <img src="./src/img/c3.jpeg" alt="" class="testimony__img">
+                        <img src="./src/img/c1.jpeg" alt="" class="testimony__img">
                         <div class="testimony__texts">
                             <h3 class="testimony__name">Samantha Xanté</h3>
                             <p class="testimony__verification">Estudiante</p>
@@ -145,7 +145,7 @@
 
                 <article class="testimony__item">
                     <div class="testimony__person">
-                        <img src="./src/img/c2.png" alt="" class="testimony__img">
+                        <img src="./src/img/c3.jpeg" alt="" class="testimony__img">
                         <div class="testimony__texts">
                             <h3 class="testimony__name">Adriana Campos</h3>
                             <p class="testimony__verification">Universitaria</p>
@@ -154,9 +154,8 @@
                     <p class="testimony__review">¡Genial! Responden casi de inmediato y ajusta los videojuegos según el gusto del cliente</p>
                 </article>
             </div>
-        </section>
 
-        <section class="testimony container">
+            <!---Los tros dos comentarios-->
             <div class="testimony__grid">
                 <article class="testimony__item">
                     <div class="testimony__person">
@@ -171,7 +170,7 @@
                 
                 <article class="testimony__item">
                     <div class="testimony__person">
-                        <img src="./src/img/c2.png" alt="" class="testimony__img">
+                        <img src="./src/img/obc.png" alt="" class="testimony__img">
                         <div class="testimony__texts">
                             <h3 class="testimony__name">Espacio Para Criticas</h3>
                             <p class="testimony__verification">Profeción</p>
