--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <div class="testimony__person">
                         <img src="./src/img/c2.png" alt="" class="testimony__img">
                         <div class="testimony__texts">
-                            <h3 class="testimony__name">Yenesia Simaj</h3>
+                            <h3 class="testimony__name">Yesenia Simaj</h3>
                             <p class="testimony__verification">Comerciante</p>
                         </div>
                     </div>
