--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <p class="testimony__verification">Universitaria</p>
                         </div>
                     </div>
-                    <p class="testimony__review">¡Genial! Responden casi de inmediato y ajusta los videojuegos según el gusto del cliente</p>
+                    <p class="testimony__review">¡Genial! Responden casi de inmediato y crean los videojuegos según el gusto del cliente</p>
                 </article>
             </div>
 
@@ -173,7 +173,7 @@
                         <img src="./src/img/obc.png" alt="" class="testimony__img">
                         <div class="testimony__texts">
                             <h3 class="testimony__name">Espacio Para Criticas</h3>
-                            <p class="testimony__verification">Profeción</p>
+                            <p class="testimony__verification">Profesión</p>
                         </div>
                     </div>
                     <p class="testimony__review">Escribenos para poder poner tu comentario o tu critica en este apartado</p>
