--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="container footer__grid">
             <nav class="nav nav--footer">
                 <a class="nav__items nav__items--footer" href="#hero">Inicio</a>
-                <a class="nav__items nav__items--footer" href="#somos">¿Quines Somos?</a>
+                <a class="nav__items nav__items--footer" href="#somos">¿Quienes Somos?</a>
                 <a class="nav__items nav__items--footer" href="#tecno">Tecnologías</a>
                 <a class="nav__items nav__items--footer" href="#juegos">Juegos</a>
             </nav>
