--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
                     <h2 class="hero__subtitle">Dando lo mejor en cada videojuego para que tu experiencia sea única</h2>
                     <h3>Hecha un Vistaso a nuestro catalago de juegos y pide el tuyo</h3> <br>
+                    <h4>¡Por el momento contamos unicamente con juegos para Pcs!</h4>
                     <a href="#juegos" class="hero__cta">Ver Juegos</a>
                 </div>    
             </section>
